# wta_demo

./: .gitignore  CMakeLists.txt  package.xml
config/: scenario.yaml  scenario3.yaml
include/: agent.h  target.h
launch/: distributed_sim.launch  generated.launch  generatedMaster.launch  kobuki.launch.xml  master.launch  one_sim.launch  sim_bot.launch  single_bot.launch  turtlebot.launch  two_by_two_sim.launch  two_sim.launch  wta_demo.launch
msg/: Model.msg  StateMsg.msg
scripts/: master.sh  quick.sh  single_bot.sh  writeSimLaunch.sh  writeSimMasterLaunch.sh
src/: agent.cpp  agent.cpp.autosave  agent_node.cpp  target.cpp
urdf/: asus_xtion_pro.urdf.xacro  hexagons.urdf.xacro  kobuki.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro
